--- a/frontend/src/features/chat/components/Chat.module.css
+++ b/frontend/src/features/chat/components/Chat.module.css
@@ -2,15 +2,15 @@
     margin: 0 auto;
     max-width: 800px;
 
-    background-color: rgba(var(--primary-dark), 0.7);
-    border: 2px solid rgba(var(--secondary-dark), 0.5);
+    background-color: rgba(var(--primary), 0.7);
+    border: 2px solid rgba(var(--secondary), 0.5);
     border-bottom: none;
 }
 
 .toolbar {
     width: 100%;
     padding: 5px 20px;
-    background-color: rgba(var(--secondary-light), 0.5);
+    background-color: rgba(var(--secondary), 0.5);
 }
 
 .chat {
